# MsmeBazaar

./: .dockerignore  .env.example  .env.local  .env.microservices.template  .env.production  .envrc  .eslintrc.js  .gitignore  .npmrc  .replit  .trivyignore  =5.0.0  ADVANCED_PERFORMANCE_SUMMARY.md  AI_SETUP_GUIDE.md  API_DOCUMENTATION.md  CI_CD_DEBUGGING_GUIDE.md  CI_CD_REPAIR_GUIDE.md  COMPLETE_OPTIMIZATION_SUMMARY.md  DATABASE_SETUP_GUIDE.md  DATABASE_SETUP_SUMMARY.md  DEBUGGING_REPORT.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SETUP.md  DEPLOYMENT_SUMMARY.md  Dockerfile  Dockerfile.client  Dockerfile.ml  FRONTEND_DEPLOYMENT_FIX.md  GITHUB_ACTIONS_FIXES.md  GITHUB_ACTIONS_STATUS.md  IMPLEMENTATION_SUMMARY.md  MICROSERVICES_DEPLOYMENT_GUIDE.md  MONOREPO_REFACTOR_SUMMARY.md  PERFORMANCE_OPTIMIZATIONS.md  PERMANENT_DEPLOYMENT_FIX.md  PRODUCTION_BUILD_RUNTIME_FIXES.md  PRODUCTION_DEPLOYMENT_FIX.md  QUICK_AI_SETUP.md  (+94 more)
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
admin-dashboard/: .env.example  README.md  docker-compose.yml  package.json  render.yaml
api-gateway/: .env.example  package.json  tsconfig.json
attached_assets/: Pasted-Build-a-Replit-compatible-but-fully-Replit-independent-monorepo-full-stack-web-app-named-MSMEAtlas--1752628255948_1752628255952.txt
backend/: requirements.txt
cache/: config.json
client/: package.json  tsconfig.json  vite.config.ts
deploy/: README.md  init.sql  kubernetes.yaml  nginx.conf  railway.json  railway.yaml  render.yaml
devops/: docker-compose.yml
docs/: BUILD_OPTIMIZATIONS.md  (+9 more)
(+1028 files in other folders)
