[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "catboost>=1.2.8",
    "celery>=5.5.3",
    "clickhouse-driver>=0.2.9",
    "fastapi>=0.116.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "mlflow>=3.1.1",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "passlib>=1.7.4",
    "plotly>=6.2.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "redis>=6.2.0",
    "requests>=2.32.4",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.41",
    "streamlit>=1.47.0",
    "uvicorn>=0.35.0",
    "xgboost>=3.0.2",
]
